fix(student-timetable): segment background
- not visible in dark mode

--- a/src/app/pages/student-timetable/student-timetable.page.scss
+++ b/src/app/pages/student-timetable/student-timetable.page.scss
@@ -24,10 +24,6 @@ ion-card {
   }
 }
 
-ion-segment{
-  --background: var(--ion-color-light);
-}
-
 .table-item:nth-child(odd) {
   --background: var(--ion-background-color) !important;
 }
